[metadata]
name = ddnswolf
version = attr: ddnswolf.version.get_full_version
author = Wolfizen
author_email = wolfizen@wolfizen.net
license = GPLv3+
description = Dynamic DNS updater
url = https://wolfizen.net/ddnswolf
classifiers =
    Environment :: Console
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Programming Language :: Python

[options]
python_requires = >=3.9
packages = find:
install_requires =
    cloudflare~=2.8
    dnspython~=2.1
    GitPython~=3.1
    netifaces~=0.11
    pyhocon~=0.3
    requests~=2.26

[options.entry_points]
console_scripts = ddnswolf = ddnswolf.main:main

[options.package_data]
ddnswolf = *.txt

[options.packages.find]
include = ddnswolf*
